# diabetes_data_analysis

./: .gitignore  README.md  setup.cfg
sql/: create_ddl.sql
src/: analyze_data_ex.py  persist_data.py
src/mods/: __init__.py  analyze_diabetes_db_data.py  decom_clarity_transformer.py  file_transformer.py
tests/: test_analyze_diabetes_db_data.py  test_setup.py
