[metadata]
name = diabetes_data_analysis
version = 0.0.1
author = James G Willmore
author_email = willmorejg@gmail.com
description = A package for analyzing diabetes data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.11
install_requires =
    python-dotenv
    duckdb
    numpy
    pandas
    psycopg2-binary
    pyarrow
    pyodbc
    SQLAlchemy
    typing_extensions
    tzdata

packages = mods
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    build
    black
    bumpver
    pdoc
